--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -22,6 +22,6 @@
     <string name="tv_forum">Forum</string>
     <string name="tv_loading">Loading</string>
     <string name="tv_shop">Point Shop</string>
+    <string name="title_activity_onboarding">OnboardingActivity</string>
     <!-- TODO: Remove or change this placeholder text -->
-    <string name="hello_blank_fragment">Hello blank fragment</string>
 </resources>
